--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <a href="https://wa.me/8498166652" target="_blank" class="inline-flex items-center justify-center gap-2 px-4 py-2 bg-green-500 text-white rounded hover:bg-green-600">
         <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" class="h-5 w-5" /> WhatsApp
       </a>
-      <a href="https://instagram.com/perfumeselegancia" target="_blank" class="inline-flex items-center justify-center gap-2 px-4 py-2 bg-pink-500 text-white rounded hover:bg-pink-600">
+      <a href="https://www.instagram.com/e.acevedo_25?igsh=MXB6eXFpNjR1MW02eg%3D%3D&utm_source=qr" target="_blank" class="inline-flex items-center justify-center gap-2 px-4 py-2 bg-pink-500 text-white rounded hover:bg-pink-600">
         <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" class="h-5 w-5" /> Instagram
       </a>
     </div>
