--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
   </div>
 
   <!-- Perfume 5 -->
-  <div class="border rounded-xl shadow hover:shadow-lg p-4 text-center">
-    <img src="https://m.media-amazon.com/images/I/51XsyqUkTIL._SL1000_.jpg" alt="Ámbar Secreto" class="mx-auto mb-4 rounded-lg h-40 sm:h-48 object-cover" />
-    <h2 class="text-lg sm:text-xl font-semibold">HAYAATI LATTAFA</h2>
-    <p class="text-xs sm:text-sm text-gray-600 mb-1">una fragancia que combina frescura y sofisticación</p>
-    <p class="text-base sm:text-lg font-bold text-purple-700">€31.00</p>
+ <div class="border rounded-xl shadow hover:shadow-lg p-4 text-center">
+    <img src="https://m.media-amazon.com/images/I/61AaKL1AhVL._SX466_.jpg" alt="Ámbar Secreto" class="mx-auto mb-4 rounded-lg h-40 sm:h-48 object-cover" />
+    <h2 class="text-lg sm:text-xl font-semibold">RASASI HAWAS M 328 FT</h2>
+    <p class="text-xs sm:text-sm text-gray-600 mb-1"> Ideal para la oficina, eventos o cenas románticas, su sutil pero impactante fragancia</p>
+    <p class="text-base sm:text-lg font-bold text-purple-700">€37.00</p>
   </div>
 
   <!-- Perfume 6 -->
